# deep-neuronmorpho

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-cpu.txt  requirements-dev-cpu.txt  requirements-dev.txt  requirements.txt  setup.sh
.github/: main.yaml
conf/: config.yaml
conf/augmentations/: default.yaml
conf/callbacks/: checkpoint.yaml
conf/data/: default.yaml
conf/experiment/: graphdino.yaml
conf/lightning_module/: contrastive.yaml  graphdino.yaml
conf/logger/: tensorboard.yaml
conf/loss/: ntxent.yaml
conf/model/: graphdino.yaml  macgnn.yaml
conf/optimizer/: adam.yaml  rmsprop.yaml
conf/scheduler/: cosine.yaml  steplr.yaml
conf/trainer/: default.yaml
conf/training/callbacks/: checkpoint.yaml
conf/training/lightning_module/: contrastive.yaml
conf/training/logger/: tensorboard.yaml
conf/training/optimizer/: adam.yaml  rmsprop.yaml  sgd.yaml
conf/training/scheduler/: cosine.yaml  steplr.yaml
conf/training/trainer/: default.yaml
config/: cfg-macgnn.yml  cfg-macgnn_demo.yml  cfg-macgnn_super_demo.yml  config-macgnn.yml  demo-graphdino.yaml  demo-macgnnv2.yaml  demo-macgnnv2.yml  macgnn_demo.yml  macgnn_super_demo.yml
deep_neuronmorpho/: __init__.py  train.py  train_contrastive.py  train_graphdino.py  train_supervised.py
deep_neuronmorpho/config/: config-macgnn.yml  config-macgnn_single.yml
deep_neuronmorpho/data/: __init__.py  augmentation.py  augmentations.py  create_dataset.py  data_utils.py  dataset.py  datasets.py  graph_augmentation.py  graph_construction.py  graph_features.py  process_swc.py  utils.py
deep_neuronmorpho/data_loader/: __init__.py  create_dataset.py  graph_augmentation.py  graph_augmentations.py  prepare_dataset.py  prepare_graphs.py  process_swc.py  split_dataset.py
deep_neuronmorpho/engine/: __init__.py  contrastive_trainer.py  data_module.py  evaluation.py  lightning_modules.py  ntxent_loss.py  ssl_trainer.py  supervised_trainer.py  trainer.py  trainer_utils.py
deep_neuronmorpho/graphdino/: augmentations.py  data_utils.py  dataset.py  train.py  trainer_utils.py
deep_neuronmorpho/models/: __init__.py  gin.py  graphdino.py  macgnn.py  macgnnv2.py  mlp.py  model_utils.py  modules.py
deep_neuronmorpho/models/config/: config-macgnn_single.yml
deep_neuronmorpho/trainer/: ntxent_loss.py  trainer.py
deep_neuronmorpho/utils/: __init__.py  model_config.py  monitoring.py  parse_config.py  plotting.py  progress.py
demo/: demo-macgnn_contrastive.ipynb  demo-macgnn_supervised.ipynb
docs/: index.md  modules.md
docs/modules/: engine.md  modules.md
docs/tutorials/: model_config.md  training.md
notebooks/: demo-macgnn_conrtastive.ipynb  demo-macgnn_contrastive.ipynb  demo-macgnn_supervised.ipynb  demo-macgnn_supervised_training.ipynb  demo-macgnn_training_pipeline.ipynb
references/: hashmacgnn  macgnn_architecture.md  tensorboard_remote.md
tests/: conftest.py  test_augmentations.py  test_data_utils.py  test_ntxent_loss.py  test_pyg_features.py  test_pyg_from_swc.py  test_swc_dfs.py
tests/data/: 1164438028_191812_5676-X8072-Y26215_reg.swc
