[project]
name = "deep_neuronmorpho"
version = "0.1.0"
requires-python = ">=3.10, <3.13"
description = "Deep learning based approaches for neuron morphology embeddings."
authors = [{ name = "Kyle Puhger", email = "krpuhger@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib>=3.10.1",
    "morphopy",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "pytorch-lightning>=2.5.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch<2.7",
    "torch-geometric>=2.6.1",
    "typer>=0.15.2",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv.sources]
morphopy = { git = "https://github.com/berenslab/MorphoPy" }

[project.urls]
repository = "https://github.com/kpeez/deep-neuronmorpho"

[project.scripts]
process-swc = "deep_neuronmorpho.data.process_swc:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO -sv --durations=0"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "external"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pylint
  "PL",
  # isort
  "I",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-comprehensions
  "C4",
  # ruff
  "RUF",
]
fixable = ["ALL"]
ignore = [
  # too many branches
  "PLR0912",
  # too many arguments
  "PLR0913",
  # too many local variables
  "PLR0914",
  # too many statements
  "PLR0915",
  # too many positional arguments
  "PLR0917",
  # magic number
  "PLR2004",
  # line too long
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
files = ["deep_neuronmorpho"]
plugins = "numpy.typing.mypy_plugin"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = [".venv", "tests", "external"]

[[tool.mypy.overrides]]
module = [
  "deep_neuronmorpho.*",
  "deep_neuronmorpho.*.*",
  "morphopy.*",
  "networkx",
  "scipy.*",
  "sklearn.*",
  "seaborn",
  "umap",
]
ignore_missing_imports = true
warn_return_any = false
disallow_any_unimported = false
disable_error_code = "attr-defined"

